Set consistent task labels.

--- a/tasks/firewall.yml
+++ b/tasks/firewall.yml
@@ -1,11 +1,11 @@
 ---
-- name: "Include firewall.yml"
+- name: "Firewall | Include firewall.yml"
   include_vars: "vars/firewall.yml"
   tags:
     - "firewall"
 
 #Install firewalld and enable it
-- name: "Install firewalld"
+- name: "Firewall | Install firewalld"
   become: "yes"
   yum:
     name: "firewalld"
@@ -14,13 +14,13 @@
   tags:
     - "firewall"
 
-- name: "Set hostname with hostnamectl"
+- name: "Firewall | Set hostname with hostnamectl"
   hostname:
     name: "{{ satellite_deployment_hostname_full }}"
   tags:
     - "firewall"
 
-- name: "Update /etc/hosts wiht satellite hostname"
+- name: "Firewall | Update /etc/hosts wiht satellite hostname"
   lineinfile:
     line: "{{ satellite_deployment_ip_address }}
       {{ satellite_deployment_hostname_full }}
@@ -29,7 +29,7 @@
   tags:
     - "firewall"
 
-- name: "Enable Firewalld"
+- name: "Firewall | Enable Firewalld"
   become: "yes"
   service:
     enabled: "yes"
@@ -39,7 +39,7 @@
     - "firewall"
 
 #Opening firewall ports
-- name: "Firewall and hostname | Opening Firewalld ports"
+- name: "Firewall | Opening Firewalld ports"
   become: "yes"
   firewalld:
     permanent: "yes"
