--- a/tasks/install_software.yml
+++ b/tasks/install_software.yml
@@ -1,12 +1,12 @@
 ---
-- name: "Include install vars"
+- name: "Install software | Include install vars"
   include_vars: "vars/install.yml"
   tags:
     - "install"
     - "update_satellite"
 
 #Install the base software
-- name: "Install_software"
+- name: "Install software | Install base software"
   become: "yes"
   yum:
     name: "{{ item }}"
