https://projects.theforeman.org/issues/10266

--- a/tasks/configure_capsule.yml
+++ b/tasks/configure_capsule.yml
@@ -2,14 +2,14 @@
 #Create a Smart Proxy
 - name: "Configure capsule | create a smart proxy for the organization"
   become: "yes"
-  shell: "hammer organization add-smart-proxy --name
+  shell: "HOME=/root hammer organization add-smart-proxy --name
     {{ satellite_deployment_organization }} --smart-proxy-id 1"
   tags:
     - capsule
 
 #Add a location to the Smart Proxy
 - name: "Configure capsule | add location smart proxy"
-  command: "hammer location add-smart-proxy --name
+  command: "HOME=/root hammer location add-smart-proxy --name
     {{ satellite_deployment_location }} --smart-proxy-id 1"
   tags:
     - capsule
@@ -17,7 +17,7 @@
 #Create domain
 - name: "Configure capsule | add domain"
   become: "yes"
-  shell: "hammer domain create --dns-id 1 --name='{{ satellite_deployment_dns_zone }}'"
+  shell: "HOME=/root hammer domain create --dns-id 1 --name='{{ satellite_deployment_dns_zone }}'"
   ignore_errors: "yes"
   when: satellite_foreman_proxy_dns|bool == true
   tags:
@@ -25,7 +25,7 @@
 
 - name: "Configure capsule | add domain to organization"
   become: "yes"
-  shell: "hammer organization add-domain --name
+  shell: "HOME=/root hammer organization add-domain --name
     {{ satellite_deployment_organization }} --domain
     {{ satellite_deployment_dns_zone }}"
   when: satellite_foreman_proxy_dns|bool == true
@@ -35,7 +35,7 @@
 #Create the DHCP Subnet
 - name: "Configure capsule | create subnet"
   become: "yes"
-  shell: "hammer subnet create --dhcp-id 1 --dns-id 1 --dns-primary
+  shell: "HOME=/root hammer subnet create --dhcp-id 1 --dns-id 1 --dns-primary
     {{ satellite_deployment_dns_primary }} --domain-ids 1
     --from {{ satellite_deployment_dhcp_start }}
     --to {{ satellite_deployment_dhcp_end }}
@@ -50,7 +50,7 @@
 #Add location to Subnet
 - name: "Configure capsule | location add subnet"
   become: "yes"
-  shell: "hammer location add-subnet
+  shell: "HOME=/root hammer location add-subnet
     --name {{ satellite_deployment_location }}
     --subnet {{ satellite_deployment_subnet_name }}"
   tags:
@@ -59,14 +59,14 @@
 #Associate the domain to capsule
 - name: "Configure capsule | associate domain capsule"
   become: "yes"
-  shell: "hammer domain update --dns-id 1 --id 1"
+  shell: "HOME=/root hammer domain update --dns-id 1 --id 1"
   tags:
     - capsule
 
 #Add Location to Domain
 - name: "Configure capsule | add location domain"
   become: "yes"
-  shell: "hammer location add-domain
+  shell: "HOME=/root hammer location add-domain
     --name {{ satellite_deployment_location }}
     --domain {{ satellite_deployment_dns_zone }}"
   tags:
@@ -75,7 +75,7 @@
 #Adding the Subnet the Organization
 - name: "Configure capsule | add subnet the organization"
   become: "yes"
-  shell: "hammer organization add-subnet
+  shell: "HOME=/root hammer organization add-subnet
     --name {{ satellite_deployment_organization }}
     --subnet {{ satellite_deployment_subnet_name }}"
   tags:
@@ -84,7 +84,7 @@
 #Add puppet environment
 - name: "Configure capsule | add puppet environment"
   become: "yes"
-  shell: "hammer organization add-environment
+  shell: "HOME=/root hammer organization add-environment
     --name {{ satellite_deployment_organization }}
     --environment {{ satellite_deployment_puppet_env }}"
   tags:
@@ -93,7 +93,7 @@
 #Add location to the environment
 - name: "Configure capsule | location add environment"
   become: "yes"
-  shell: "hammer location add-environment
+  shell: "HOME=/root hammer location add-environment
     --name {{ satellite_deployment_location }}
     --environment {{ satellite_deployment_puppet_env }}"
   tags:
@@ -101,7 +101,7 @@
 
 #Add location to the organization
 - name: "Configure capsule | adding location to organization"
-  shell: "hammer location add-organization
+  shell: "HOME=/root hammer location add-organization
     --name {{ satellite_deployment_location  }}
     --organization {{ satellite_deployment_organization }}"
   tags:
