--- a/tasks/email.yml
+++ b/tasks/email.yml
@@ -6,3 +6,8 @@
   notify: "restart katello service"
   tags: email
 
+- name "Email | set email reply address"
+  shell: "HOME=/root hammer settings set 
+          --name email_reply_address
+          --value {{ satellite_deployment_email_address }}"
+  tags: email
