--- a/tasks/configure_satellite.yml
+++ b/tasks/configure_satellite.yml
@@ -60,3 +60,12 @@
   register: "sync_repos_result"
   retries: 3
   until: sync_repos_result|success
+
+# Change default settings
+- name: "Configure satellite | set foreman_url"
+  shell: "HOME=/root hammer settings set
+    --name foreman_url --value https://{{ satellite_deployment_hostname_full }}"
+
+- name: "Configure satellite | set unattended_url"
+  shell: "HOME=/root hammer settings set
+    --name unattended_url --value https://{{ satellite_deployment_hostname_full }}"
