--- a/tasks/set_facts.yml
+++ b/tasks/set_facts.yml
@@ -28,3 +28,7 @@
     "satellite_deployment_remote_ssl_cacert": "{{
       'http://' in satellite_deployment_ssl_cacert_path or
       'ftp://' in satellite_deployment_ssl_cacert_path }}"
+
+- name: "Facts | set admin password fact"
+  set_fact:
+    "satellite_admin_password": "{{ satellite_deployment_admin_password }}"
