--- a/tasks/configure_satellite.yml
+++ b/tasks/configure_satellite.yml
@@ -60,6 +60,7 @@
   register: "sync_repos_result"
   retries: 3
   until: sync_repos_result|success
+  tags: sync
 
 # Create a sync plan
 - name: "Configure satellite | list daily sync plan"
