--- a/tasks/configure_content.yml
+++ b/tasks/configure_content.yml
@@ -44,3 +44,14 @@
     - "{{ satellite_deployment_repositories|map(attribute='product_name')|unique|list }}"
   loop_control:
     loop_var: product
+
+# Why does red hat have to make this so difficult?
+- name: "Configure content | promote content view to environment"
+  shell: "HOME=/root hammer content-view version promote
+    --content-view default
+    --version 1
+    --to-lifecycle-environment {{ item.name }}
+    --organization '{{satellite_deployment_organization }}'"
+  with_items: "{{ satellite_deployment_lifecycle_environments }}"
+  tags:
+    - "debug"
