--- a/tasks/configure_content.yml
+++ b/tasks/configure_content.yml
@@ -45,13 +45,18 @@
   loop_control:
     loop_var: product
 
-# Why does red hat have to make this so difficult?
+- name: "Configure content | publish content view"
+  shell: "HOME=/root hammer content-view publish
+    --name default
+    --description 'content management performed by ansible'
+    --organization '{{ satellite_deployment_organization }}'"
+  tags:
+    - "debug"
+
 - name: "Configure content | promote content view to environment"
   shell: "HOME=/root hammer content-view version promote
     --content-view default
-    --version 1
+    --version `date '+%Y%m%d%H%M'`
     --to-lifecycle-environment {{ item.name }}
     --organization '{{satellite_deployment_organization }}'"
   with_items: "{{ satellite_deployment_lifecycle_environments }}"
-  tags:
-    - "debug"
