--- a/tasks/configure_content.yml
+++ b/tasks/configure_content.yml
@@ -45,18 +45,30 @@
   loop_control:
     loop_var: product
 
+# Some developer thought it woudl be nifty to write a science project using postgres.
 - name: "Configure content | publish content view"
   shell: "HOME=/root hammer content-view publish
     --name default
     --description 'content management performed by ansible'
     --organization '{{ satellite_deployment_organization }}'"
   tags:
-    - "debug"
+    - "publish_content"
+
+# And of course now you have to go back and scoop up the version you published.
+- name: "Configure content | get published version"
+  shell: "HOME=/root hammer content-view version list
+    --content-view default
+    --organization "{{ satellite_deployment_organization }}"
+    | awk '/^[0-9]/ {print $1}' | tail -1"
+  register: "published_version_id"
 
 - name: "Configure content | promote content view to environment"
   shell: "HOME=/root hammer content-view version promote
     --content-view default
-    --version `date '+%Y%m%d%H%M'`
+    --id {{ published_version_id }}
     --to-lifecycle-environment {{ item.name }}
     --organization '{{satellite_deployment_organization }}'"
-  with_items: "{{ satellite_deployment_lifecycle_environments }}"
+  with_items: 
+    - "{{ satellite_deployment_lifecycle_environments }}"
+  tags:
+    - "debug"
