--- a/tasks/configure_content.yml
+++ b/tasks/configure_content.yml
@@ -14,15 +14,6 @@
     --environment-id 1"
   ignore_errors: "yes" # yes I'm lazy
 
-- name: "Configure content | add default activation key"
-  shell: "HOME=/root hammer activation-key create
-    --unlimited-hosts
-    --organization '{{ satellite_deployment_organization }}'
-    --lifecycle-environment-id 1
-    --content-view-id 1
-    --name auto_register"
-  ignore_errors: "yes"
-
 - name: "Configure content | add application lifecycle environment"
   shell: "HOME=/root hammer lifecycle-environment create
     --name '{{ item.name }}'
@@ -45,7 +36,7 @@
   loop_control:
     loop_var: product
 
-# Some developer thought it woudl be nifty to write a science project using postgres.
+# Some intern probably thought it would be nifty to write a science project using postgres.
 - name: "Configure content | publish content view"
   shell: "HOME=/root hammer content-view publish
     --name default
@@ -58,17 +49,34 @@
 - name: "Configure content | get published version"
   shell: "HOME=/root hammer content-view version list
     --content-view default
-    --organization "{{ satellite_deployment_organization }}"
+    --organization '{{ satellite_deployment_organization }}'
     | awk '/^[0-9]/ {print $1}' | tail -1"
-  register: "published_version_id"
+  register: published_version_id
+  tags:
+    - "publish_content"
 
+# More massive database writes.
 - name: "Configure content | promote content view to environment"
   shell: "HOME=/root hammer content-view version promote
     --content-view default
-    --id {{ published_version_id }}
+    --id {{ published_version_id.stdout }}
     --to-lifecycle-environment {{ item.name }}
     --organization '{{satellite_deployment_organization }}'"
   with_items: 
     - "{{ satellite_deployment_lifecycle_environments }}"
+  tags:
+    - "publish_content"
+
+- name: "Configure content | add activation keys"
+  shell: "HOME=/root hammer activation-key create
+    --name {{ item.name }}-autoreg
+    --unlimited-content-hosts true
+    --description '{{ satellite_deployment_organization }} Stack in the {{ item.name }} Environment'
+    --lifecycle-environment {{ item.name }}
+    --content-view default
+    --organization '{{ satellite_deployment_organization }}'"
+  with_items:
+    - "{{ satellite_deployment_lifecycle_environments }}"
+  ignore_errors: "yes"
   tags:
     - "debug"
